Add checkbox button

--- a/html/test.html
+++ b/html/test.html
@@ -34,13 +34,11 @@
             </div>
             <div class="quiz-selector">
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer1" name="answer1">
                     <span class="sentence">We should follow a certain etiquette</span>
                 </div>
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer2" name="answer2">
                     <span class="sentence">We should behave normally</span>
                 </div>
             </div>
@@ -51,13 +49,11 @@
             </div>
             <div class="quiz-selector">
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer1" name="answer1">
                     <span class="sentence">We should follow a certain etiquette</span>
                 </div>
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer2" name="answer2">
                     <span class="sentence">We should behave normally</span>
                 </div>
             </div>
@@ -68,13 +64,11 @@
             </div>
             <div class="quiz-selector">
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer1" name="answer1">
                     <span class="sentence">We should follow a certain etiquette</span>
                 </div>
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer2" name="answer2">
                     <span class="sentence">We should behave normally</span>
                 </div>
             </div>
@@ -85,13 +79,11 @@
             </div>
             <div class="quiz-selector">
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer1" name="answer1">
                     <span class="sentence">We should follow a certain etiquette</span>
                 </div>
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer2" name="answer2">
                     <span class="sentence">We should behave normally</span>
                 </div>
             </div>
@@ -102,13 +94,11 @@
             </div>
             <div class="quiz-selector">
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer1" name="answer1">
                     <span class="sentence">We should follow a certain etiquette</span>
                 </div>
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer2" name="answer2">
                     <span class="sentence">We should behave normally</span>
                 </div>
             </div>
@@ -119,13 +109,11 @@
             </div>
             <div class="quiz-selector">
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer1" name="answer1">
                     <span class="sentence">We should follow a certain etiquette</span>
                 </div>
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer2" name="answer2">
                     <span class="sentence">We should behave normally</span>
                 </div>
             </div>
@@ -136,13 +124,11 @@
             </div>
             <div class="quiz-selector">
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer1" name="answer1">
                     <span class="sentence">We should follow a certain etiquette</span>
                 </div>
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer2" name="answer2">
                     <span class="sentence">We should behave normally</span>
                 </div>
             </div>
@@ -153,13 +139,11 @@
             </div>
             <div class="quiz-selector">
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer1" name="answer1">
                     <span class="sentence">We should follow a certain etiquette</span>
                 </div>
                 <div class="answer">
-                    <div class="icon">
-                    </div>
+                    <input type="checkbox" id="answer2" name="answer2">
                     <span class="sentence">We should behave normally</span>
                 </div>
             </div>
