--- a/html/information.html
+++ b/html/information.html
@@ -36,7 +36,7 @@
                     <li>
                         <div class="test-div">
                             <p>If you want to test your ability, take a test. Or read our recomandation before.</p>
-                            <span class="btnn" onclick="window.location.href = 'test.html';">Test</span>
+                            <span class="btnn" onclick="window.location.href = 'test.php';">Test</span>
                         </div>
                     </li>
                     <li>
