--- a/html/landing.html
+++ b/html/landing.html
@@ -44,8 +44,8 @@
                     You can access from here some things :
                 </p>
                 <div>
-                    <span class="btn-home" onclick="window.location.href = 'category.html';">Category</span>
-                    <span class="btn-home" onclick="window.location.href = 'user.html';">User Profile</span>
+                    <span class="btn-home" onclick="window.location.href = 'category.php';">Category</span>
+                    <span class="btn-home" onclick="window.location.href = 'user.php';">User Profile</span>
                     <span class="btn-home" onclick="window.location.href = 'statistics.html';">Statistics</span>
                 </div>
             </div>
