--- a/html/ghidUtilizare.html
+++ b/html/ghidUtilizare.html
@@ -36,17 +36,19 @@
       <p>După conectare/înregistrare utilizatorul ajunge la pagina de landing, unde are din nou descriere aplicației și poate accesa prin butoanele:</p>
       <ul>
         <li>
-          Butonul de category te redirecționează către o pagina unde poți alege o categorie, după care poți citi 
-          informații despre acel subiect sau poți accesa un test legat de acea categorie.
+          Butonul de category te redirecționează către o pagina unde poți alege o categorie.
         </li>
         <li>
-          Butonul de recommendations, face recomandări utilizatorului bazate pe profilul completat la punctul de înregistrare, cu privire la ce categori ar fi peentru interesul lui.
+          Butonul de recommendations, face recomandări utilizatorului bazate pe profilul completat la punctul de înregistrare, cu privire la ce categori ar fi pentru interesul lui.
         </li>
         <li>
           Butonul de statistics te redicreționează către o pagină care are 2 secțiuni : scorul utilizatorului si primii 10 cei mai buni utilizatori.
         </li>
       </ul>
-      <p>Pagina de test, după alegerea categoriei, este o pagină ce conține mai multe întrebări cu 2 variante de răspunsuri, unde poți bifa răspunsul corect, iar la final trimiți toate răspunsurile tale, iar în funcție de acestea vei avea un score în statistics.</p>
+      <p>Pagina de categorii, este o pagina unde utilizatorul poate alege o categorie despre care dorește să afle mai multe, fiind redirecționat către pagina de informații.</p>
+      <p>Pagina de informații este dedicată link-urilor despre categoria aleasă, iar la îneputul paginii se află un buton către pagina de test.</p>
+      <p>Pagina de test, după alegerea categoriei, este o pagină ce conține mai multe întrebări cu 2 variante de răspunsuri, unde poți bifa răspunsul corect. La finalul testului există un buton pentru a valida răspunsurile bifate.</p>
+      <p>Pagina cu statistici va afișa scorul utilizatorului, dar și primii 10 cei mai buni utilizatori.</p>
     </section>
 
     <section id="bibliografie">
