--- a/html/ghidUtilizare.html
+++ b/html/ghidUtilizare.html
@@ -45,7 +45,7 @@
           Butonul de statistics te redicreționează către o pagină care are 2 secțiuni : scorul utilizatorului si primii 10 cei mai buni utilizatori.
         </li>
       </ul>
-      <p>Pagina de categorii, este o pagina unde utilizatorul poate alege o categorie despre care dorește să afle mai multe, fiind redirecționat către pagina de informații.</p>
+      <p>Pagina de categori, este o pagina unde utilizatorul poate alege o categorie despre care dorește să afle mai multe, fiind redirecționat către pagina de informații.</p>
       <p>Pagina de informații este dedicată link-urilor despre categoria aleasă, iar la îneputul paginii se află un buton către pagina de test.</p>
       <p>Pagina de test, după alegerea categoriei, este o pagină ce conține mai multe întrebări cu 2 variante de răspunsuri, unde poți bifa răspunsul corect. La finalul testului există un buton pentru a valida răspunsurile bifate.</p>
       <p>Pagina cu statistici va afișa scorul utilizatorului, dar și primii 10 cei mai buni utilizatori.</p>
