Corrected ghidUtilizare.html

--- a/html/ghidUtilizare.html
+++ b/html/ghidUtilizare.html
@@ -33,7 +33,7 @@
           completa prima data datele principale, iar apoi vă veți completa profilul.
         </li>
       </ul>
-      <p>După conectare/înregistrare utilizatorul ajunge la pagina de landing, unde are din nou descriere aplicației și poate accesa prin butoanele:</p>
+      <p>După conectare/înregistrare utilizatorul ajunge la pagina de landing, unde se află descriere aplicației și poate accesa prin butoanele:</p>
       <ul>
         <li>
           Butonul de category te redirecționează către o pagina unde poți alege o categorie.
@@ -45,8 +45,8 @@
           Butonul de statistics te redicreționează către o pagină care are 2 secțiuni : scorul utilizatorului si primii 10 cei mai buni utilizatori.
         </li>
       </ul>
-      <p>Pagina de categori, este o pagina unde utilizatorul poate alege o categorie despre care dorește să afle mai multe, fiind redirecționat către pagina de informații.</p>
-      <p>Pagina de informații este dedicată link-urilor despre categoria aleasă, iar la îneputul paginii se află un buton către pagina de test.</p>
+      <p>Pagina de categori, este o pagina unde utilizatorul poate alege o categorie despre care dorește să afle mai multe, după alegerea acesteia, fiind redirecționat către pagina de informații.</p>
+      <p>Pagina de informații este dedicată link-urilor despre categoria aleasă, iar la începutul paginii se află un buton către pagina de test.</p>
       <p>Pagina de test, după alegerea categoriei, este o pagină ce conține mai multe întrebări cu 2 variante de răspunsuri, unde poți bifa răspunsul corect. La finalul testului există un buton pentru a valida răspunsurile bifate.</p>
       <p>Pagina cu statistici va afișa scorul utilizatorului, dar și primii 10 cei mai buni utilizatori.</p>
     </section>
