update scholarly article

--- a/html/raport.html
+++ b/html/raport.html
@@ -19,22 +19,37 @@
 
     <section id="structura">
         <h3>Prototip interfeței web</h3>
-        <p>Pentru prima parte a proiectului (P), am realizat partea de interfața web, astfel încât să respecte funcționalitățile esențiale ale proiectului, folosind HTML și CSS. </p>
+        <p>Pentru prima parte a proiectului (I), am realizat partea de interfața web, astfel încât să respecte funcționalitățile esențiale ale proiectului, folosind HTML5 și CSS3. </p>
         <h3>Arhitectura aplicației</h3>
         <p>Următoarea partea a fost să realizăm o arhitectură a proiectului, am construit arhitectura de ansamblu 
             a aplicației. Am decis ce tehnologii vom folosi în continuare (pentru partea de back-end: PHP,
             iar pentru baza de date: MySql). Totodată, am realizat diagrama bazei de date, 
             diagrama de arhitectură, diagrama de clase si use-case-uri aplicației. La final am adaugăt o secțiune cu task-uri,
             unde am decis fiecare ce va face.
+            <br>
+            Arhitectura mai detaliată o puteți accesa aici :
+            <a href = "https://docs.google.com/document/d/1tOmsVXJBAi3KXEivRTk-MRf6HtHXmY5G7Fra9gcX6pk/edit">GoMaR</a> 
         </p>
         <h3>Varianta finala a aplicației web</h3>
         <p>In etapa finala (S), am implementat funcționalitățile aplicației, am făcut legătura dintre partea de back-end 
             și partea de front-end și am construit baza de date.</p>
         <p>Astfel, un user va putea să : </p>
         <ul>
+            <li>să se înregistreze</li>
+            <li>să se logheze într-un cont deja existent</li>
+            <li>să își editeze profilul</li>
+            <li>va primi recomandări pe baza profilului său referitor la categoriile ce l-ar putea interesa</li>
             <li>să citeascî informații despre o anumită categorie aleasă</li>
             <li>să-și teste nivelul de cunoștiințe la o anumită categorie</li>
-            <li>să-și vadă scorul în raport cu ceilalți useri</li>
+            <li>să-și vadă scorul total, dar și scorul specific fiecărei categorii testate</li>
+            <li>să vadă clasamentul</li>
+        </ul>
+        <p>În afară de funcționalitățile disponibile pentru user, adminul va putea să:  </p>
+        <ul>
+            <li>să șteargă un utilizator din baza de date</li>
+            <li>să șteargă o întrebare din baza de date, odată cu aceasta fiind șterse și răspunsurile aferente</li>
+            <li>să adauge o nouă sursa de informații pentru o categorie</li>
+            <li>să adauge o întrebare</li>
         </ul>
     </section>
 
