--- a/html/ghidUtilizare.html
+++ b/html/ghidUtilizare.html
@@ -25,12 +25,13 @@
         sau înregistrare.</p>
       <ul>
         <li>
-          Butonul de conectare (login) te redirecționează către o pagina nouă unde trebuie introdus username-ul, email
+          Butonul de conectare (login) te redirecționează către o pagina nouă unde trebuie introduse username-ul, email
           și parola aferentă contului. Acest buton este prentru utilizatorii care au deja cont.
         </li>
         <li>
           În cazul în care nu sunteți încă utilizator, vă puteți înregistra folosind butonul de register unde veți
-          completa prima data datele principale, iar apoi vă veți completa profilul.
+          completa prima data datele principale, fiind restricționat la un nume de utilizator neexistent, iar apoi 
+          vă veți completa profilul pe baza căruia veți primi recomandări care v-ar putea fi de interes.
         </li>
       </ul>
       <p>După conectare/înregistrare utilizatorul ajunge la pagina de landing, unde se află descriere aplicației și poate accesa prin butoanele:</p>
@@ -43,6 +44,9 @@
         </li>
         <li>
           Butonul de statistics te redicreționează către o pagină care are 2 secțiuni : scorul utilizatorului si primii 10 cei mai buni utilizatori.
+        </li>
+        <li>
+          Butonul de update profile v-a permite editarea profilului.
         </li>
       </ul>
       <p>Pagina de categori, este o pagina unde utilizatorul poate alege o categorie despre care dorește să afle mai multe, după alegerea acesteia, fiind redirecționat către pagina de informații.</p>
